--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "backpack/crud": "^6.6",
         "backpack/theme-coreuiv4": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.3",
         "laravel/framework": "^10.10",
         "laravel/helpers": "^1.7",
         "laravel/sanctum": "^3.3",
